--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MySql": "server=127.0.0.1;database=notes_db;uid=root;pwd=root;"
-  }
+    "ConnectionStrings": {
+        "MySql": "server=34.76.141.152;database=datbase2;uid=root;pwd=Pinkwine123;"
+    }
 }
